{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 159,
  "lineage": "452ebf4a-4364-b22a-9b6b-22695fa442ce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "connectus_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767828753202:internet-gateway/igw-0a397c1e343123bfa",
            "id": "igw-0a397c1e343123bfa",
            "owner_id": "767828753202",
            "tags": {
              "Name": "connectus-igw"
            },
            "tags_all": {
              "Name": "connectus-igw"
            },
            "vpc_id": "vpc-011f925bcc27bb2d2"
          },
          "dependencies": [
            "aws_vpc.connectus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "connectus_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:767828753202:loadbalancer/app/connectus-lb/2247222d493ef451",
            "arn_suffix": "app/connectus-lb/2247222d493ef451",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "connectus-lb-565827777.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:767828753202:loadbalancer/app/connectus-lb/2247222d493ef451",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "connectus-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07377b1b0dafc1e65"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0926e07e4a112ff53"
              },
              {
                "subnet_id": "subnet-0ed13569f4ab34300"
              }
            ],
            "subnets": [
              "subnet-0926e07e4a112ff53",
              "subnet-0ed13569f4ab34300"
            ],
            "vpc_id": "vpc-011f925bcc27bb2d2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.connectus_sg",
            "aws_subnet.connectus_subnet",
            "aws_subnet.connectus_subnet_2",
            "aws_vpc.connectus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "connectus_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:767828753202:listener/app/connectus-lb/2247222d493ef451/cf56acfdf84274d2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:767828753202:targetgroup/connectus-target-group/0255eb39d41a04f4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:767828753202:listener/app/connectus-lb/2247222d493ef451/cf56acfdf84274d2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:767828753202:loadbalancer/app/connectus-lb/2247222d493ef451",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.connectus_lb",
            "aws_lb_target_group.connectus_target_group",
            "aws_security_group.connectus_sg",
            "aws_subnet.connectus_subnet",
            "aws_subnet.connectus_subnet_2",
            "aws_vpc.connectus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "connectus_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:767828753202:targetgroup/connectus-target-group/0255eb39d41a04f4",
            "arn_suffix": "targetgroup/connectus-target-group/0255eb39d41a04f4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:767828753202:targetgroup/connectus-target-group/0255eb39d41a04f4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-1:767828753202:loadbalancer/app/connectus-lb/2247222d493ef451"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "connectus-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-011f925bcc27bb2d2"
          },
          "dependencies": [
            "aws_vpc.connectus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "connectus_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767828753202:security-group/sg-07377b1b0dafc1e65",
            "description": "Security group for ConnectUs application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07377b1b0dafc1e65",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "connectus-sg",
            "name_prefix": "",
            "owner_id": "767828753202",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-011f925bcc27bb2d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.connectus_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "connectus_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767828753202:subnet/subnet-0926e07e4a112ff53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0926e07e4a112ff53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767828753202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "connectus-subnet"
            },
            "tags_all": {
              "Name": "connectus-subnet"
            },
            "vpc_id": "vpc-011f925bcc27bb2d2"
          },
          "dependencies": [
            "aws_vpc.connectus_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "connectus_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767828753202:subnet/subnet-0ed13569f4ab34300",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed13569f4ab34300",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767828753202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "connectus-subnet-2"
            },
            "tags_all": {
              "Name": "connectus-subnet-2"
            },
            "vpc_id": "vpc-011f925bcc27bb2d2"
          },
          "dependencies": [
            "aws_vpc.connectus_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "connectus_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:767828753202:vpc/vpc-011f925bcc27bb2d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01609a476f1d338d7",
            "default_route_table_id": "rtb-00541e8e4df5f38b1",
            "default_security_group_id": "sg-09af4f260c6bdc251",
            "dhcp_options_id": "dopt-043d9e7a865595bf6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-011f925bcc27bb2d2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00541e8e4df5f38b1",
            "owner_id": "767828753202",
            "tags": {
              "Name": "connectus-vpc"
            },
            "tags_all": {
              "Name": "connectus-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}